--- a/.github/workflows/market-data-update.yml
+++ b/.github/workflows/market-data-update.yml
@@ -17,6 +17,14 @@ jobs:
         persist-credentials: false
         fetch-depth: 0
 
+    - name: GitHub Push
+      uses: ad-m/github-push-action@v0.6.0
+      with:
+        force: true
+        directory: "."
+        ref: ${{ github.head_ref }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
@@ -35,13 +43,6 @@ jobs:
     - name: Generate Timestamp
       id: current_time
       run: echo "::set-output name=timestamp::$(date +'%Y-%m-%d %H:%M:%S UTC')"
-
-    - name: GitHub Push
-      uses: ad-m/github-push-action@v0.6.0
-      with:
-        force: true
-        directory: "."
-        github_token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Update README.md
       run: |
