--- a/.github/workflows/market-data-update.yml
+++ b/.github/workflows/market-data-update.yml
@@ -10,6 +10,9 @@ on:
 jobs:
   update-data:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
 
     steps:
     - uses: actions/checkout@v2      
