--- a/.github/workflows/market-data-update.yml
+++ b/.github/workflows/market-data-update.yml
@@ -20,15 +20,6 @@ jobs:
         persist-credentials: false
         fetch-depth: 0
 
-    - name: GitHub Push
-      uses: ad-m/github-push-action@master
-      with:
-        force: true
-        directory: "."
-        branch: main
-        ref: ${{ github.head_ref }}
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
@@ -44,19 +35,15 @@ jobs:
           node index.js $timeframe || echo "Failed to fetch data for $timeframe"
         done
 
-    - name: Generate Timestamp
-      id: current_time
-      run: echo "::set-output name=timestamp::$(date +'%Y-%m-%d %H:%M:%S UTC')"
-
-    - name: Update README.md
+    - name: Run Bot Task
       run: |
-        echo "Updating README.md with the last update date"
-        sed -i "s/Last Update: .*/Last Update: ${{ steps.current_time.outputs.timestamp }}/" README.md
+        chmod +x ./task.sh
+        ./task.sh
 
     - name: Commit and push if there are changes
-      run: |
-        git config --global user.email "cahyorizqullah@gmail.com"
-        git config --global user.name "Cahyo Dwi Putro"
-        git add -A
-        git commit -m "Automated market data update for all timeframes - Last Update: ${{ steps.current_time.outputs.timestamp }}" -a || echo "No changes to commit"
-        git push
+      uses: ad-m/github-push-action@master
+      with:
+        force: true
+        directory: "."
+        branch: main
+        github_token: ${{ secrets.GITHUB_TOKEN }}
